--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "keywords": [],
   "main": "src/index.tsx",
-  "dependencies": {
+  "dependencies": {"ajv": "^8.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.0",
